<resources>
    <string name="app_name">PlaylistMakerGuseinov</string>
    <string name="title_main">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_medialib">Медиатека</string>
    <string name="button_setting">Настройки</string>
    <string name="title_setting">Настройки</string>
    <string name="setting_dark_theme">Темная тема</string>
    <string name="setting_share">Поделиться приложением</string>
    <string name="setting_support">Написать в поддержку</string>
    <string name="setting_user_agreement">Пользовательское соглашение</string>
</resources>