<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B22"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/settings_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <Button
            android:id="@+id/settings_icon"
            android:background="#FFFFFF"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            />

        <Spinner
            android:id="@+id/toolbar_spinner"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/settings_label"
            android:spinnerMode="dropdown"
            android:visibility="invisible"/>

        <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>
    </RelativeLayout>

    <Button
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_rounded"
        android:text="@string/button_search"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        android:layout_weight="1"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/materialButton1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_rounded"
        android:text="@string/button_medialib"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        android:layout_weight="1"
        app:icon="@drawable/ic_medialib"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        app:backgroundTint="@null"
        />

    <Button
        android:id="@+id/materialButton2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_rounded"
        android:text="@string/button_setting"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        android:layout_weight="1"
        app:icon="@drawable/ic_setting"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        app:backgroundTint="@null"
         />

</LinearLayout>