<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B22"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/settings_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/settings_icon"
            android:background="#FFFFFF"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:gravity="end"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            />
        <Spinner
            android:id="@+id/toolbar_spinner"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/settings_label"
            android:spinnerMode="dropdown"
            android:visibility="invisible"
            />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dark_mode_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_dark_theme"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <RelativeLayout
            android:id="@+id/custom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="22dp"
            android:gravity="center_vertical|end">

            <ImageView
                android:id="@+id/custom_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="3dp"
                android:layout_marginEnd="3dp"
                android:src="@drawable/ic_track"
                app:tint="#9FBBF3"
                />

            <ImageView
                android:id="@+id/slider_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_knob"
                android:layout_marginStart="17dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="#3772E7"
                />
        </RelativeLayout>
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/share_app_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/share_app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_share"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <ImageView
            android:id="@+id/share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_share"
            app:tint="#FFFFFF"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/support_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_support"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <ImageView
            android:id="@+id/support_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_support"
            app:tint="#FFFFFF"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/agreement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_agreement"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_arrow"
            app:tint="#FFFFFF"
            />
    </FrameLayout>

</LinearLayout>