<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!-- Контейнер для настроек -->
    <RelativeLayout
        android:id="@+id/settings_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <!-- Кнопка-иконка настроек -->
        <ImageButton
            android:id="@+id/settings_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:contentDescription="TODO"
            android:src="@drawable/ic_back"
            />

        <!-- Текстовый ярлык настроек -->
        <TextView
            android:id="@+id/settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            android:textSize="22sp"
            android:textColor="#1A1B22"
            android:gravity="end"
            android:layout_toEndOf="@id/settings_icon"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            />

        <!-- Выпадающий список (спиннер) -->
        <Spinner
            android:id="@+id/toolbar_spinner"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@id/settings_label"
            android:spinnerMode="dropdown"
            android:visibility="invisible"
            />

        <!-- Кнопка (скрытая) -->
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <!-- Контейнер для переключения темной темы -->
    <RelativeLayout
        android:id="@+id/dark_mode_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <!-- Текстовая метка темной темы -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_dark_theme"
            android:textSize="16sp"
            android:textColor="#1A1B22"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <!-- Переключатель темной темы -->
        <RelativeLayout
            android:id="@+id/custom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="22dp"
            android:gravity="center_vertical|end">

            <!-- Трек переключателя -->
            <ImageView
                android:id="@+id/custom_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="3dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_track"
                />

            <!-- Ручка переключателя -->
            <ImageView
                android:id="@+id/slider_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_knob"
                android:layout_marginEnd="17dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </RelativeLayout>

    <!-- Контейнер для кнопки "Поделиться приложением" -->
    <FrameLayout
        android:id="@+id/share_app_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <!-- Текстовая метка для кнопки "Поделиться" -->
        <TextView
            android:id="@+id/share_app_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_share"
            android:textSize="16sp"
            android:textColor="#1A1B22"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <!-- Иконка "Поделиться" -->
        <ImageView
            android:id="@+id/share_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            />
    </FrameLayout>

    <!-- Контейнер для кнопки "Поддержка" -->
    <FrameLayout
        android:id="@+id/support_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <!-- Текстовая метка для кнопки "Поддержка" -->
        <TextView
            android:id="@+id/support_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_support"
            android:textSize="16sp"
            android:textColor="#1A1B22"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp"
            />

        <!-- Иконка "Поддержка" -->
        <ImageView
            android:id="@+id/support_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_support"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            />
    </FrameLayout>

    <!-- Контейнер для кнопки "Пользовательское соглашение" -->
    <FrameLayout
        android:id="@+id/agreement_frame"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="0dp">

        <!-- Текстовая метка для кнопки "Пользовательское соглашение" -->
        <TextView
            android:id="@+id/agreement_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_user_agreement"
            android:textSize="16sp"
            android:textColor="#1A1B22"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="21dp" />

        <!-- Иконка стрелки -->
        <ImageView
            android:id="@+id/arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            />
    </FrameLayout>

</LinearLayout>
